# montage

./: .env  .eslintrc.js  .gitignore  .prettierrc  LICENSE  README.md  index.html  logo.ai  package.json  tsconfig.json  vite.config.ts
src/: App.vue  env.d.ts  index.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CustomButton.vue  Greet.vue  UploadOverlay.vue
src/components/app/: btn.vue  colorPicker.vue  mSelect.vue  mTextInput.vue  progressBar.vue  slider.vue  textInput.vue  toasts.vue
src/components/dashboard/: Controls.vue  Endbar.vue  Hoverbar.vue  LayerList.vue  MemoryDisplay.vue  Seekbar.vue  TimeTicks.vue  Timeline.vue
src/i18n/: en.ts  hr.ts
src/models/: common.ts  font.ts
src/pages/: Auth.vue  Dashboard.vue  Editor.vue  dashboard.scss
src/router/: routeNames.ts  routes.ts
src/store/: app.ts  dashboard.ts  toast.ts
src/utils/: colors.ts  constants.ts  fabric.ts  helpers.ts  types.ts  variables.scss
video-editor/: .eslintignore  .eslintrc.js  .prettierrc  README.md  package-lock.json  package.json  quasar.conf.js  tsconfig.json
video-editor/src/: App.vue  index.template.html
video-editor/src-electron/: electron-main.js  video-editor.code-workspace
video-editor/src-electron/icons/: icon.icns
video-editor/src/boot/: axios.ts  i18n.ts
video-editor/src/components/: CompositionComponent.vue  EssentialLink.vue
video-editor/src/i18n/: index.ts
video-editor/src/layouts/: MainLayout.vue
video-editor/src/models/: global.ts
video-editor/src/pages/: Index.vue  (+1 more)
(+27 files in other folders)
